popup/style.css
/*
color variables
*/
:root{
  --main-text-color: #0c0c0d;
  --sec-text-color:#737373;
  --main-bg-color: #ffffff;
  --grey-bg-color: #ededf0;
  --main-hl-color: #45a1ff;
  --shadow-hl-color: #cde6ff;
  --sec-hl-color: #deeeff;
  /* --sec-hl-color: #0a84ff; */
  /* --sec-hl-color:  rgb(162, 227, 255); */
}


/*
general style
*/
html {
  font-family: sans-serif;
  font-size: 10px;
  overflow: hidden;
}
body {
  width: 390px;
  height: 420px;
  margin: 0 auto;
  background-color: var(--main-bg-color);
  color: var(--main-text-color);
  font-size: 1.3rem;
}
main{
  padding: 4px 4px;
  /* 420 - 15(footer height) - 26(21.5+4 header) - 2*4 (top&bottom padding) */
  height: calc(405px - 26px - 8px);
  display: flex;
  flex-direction: column;
}


/*
nav bar style
*/

header{
  padding: 4px;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0 8px;
  /* background: lightcyan; */
}

nav span{
  display: inline;
  margin: 0 24px;
  padding: 0 8px;
  line-height: 1.5;
  color: var(--sec-text-color);
  font-weight: bold;
  border-bottom: 2px solid transparent;
  cursor: pointer;
  /* background: pink; */
}
nav span:hover{
  border-bottom: 2px solid #cde6ff;
}
nav span.active{
  color: var(--main-text-color);
  border-bottom: 2px solid #45a1ff;
}


/* 
auto form style
*/

form.auto div.flex-container {
  display: flex;
  line-height: 1.5;
  margin-bottom: 4px;
}
form.auto div.flex-container span{
  display: inline-block;
  width: 22px;
}
form.auto div.flex-container label{
  display: flex;
}
form.auto div.flex-container label span{
  display: inline-block;
  width: 3.4em;
  margin-left: 4px;
}
form.auto div.flex-container > :nth-child(3){
  flex: 1;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0 8px;
  background: var(--grey-bg-color);
  color: var(--sec-text-color);
}

form.auto div.flex-container span#ending-gear {
  background-image:  url("./assets/settings-36px.svg");
  background-size: 20px 20px;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
}


/* narrow top margin of horizonal bar */
hr {
  margin-top: 4px;
}


/* 
very small footer style 
*/

footer{
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: var(--sec-text-color);
}
footer  div.flex-container{
  display: flex;
  justify-content: space-between;
  padding: 0 4px;
  color: #F9F9FA;
  font-size: 1rem;
  font-family: monospace;
  line-height: 1.5;
}


/* 
found tabs style 
*/

#found-tabs {
  margin: 0;
  margin-bottom: 4px;
  padding: 0;
  overflow: auto;
}
#found-tabs ol{
  margin: 0;
  padding: 0;
  overflow: visible;
  font-size: 1.3rem;
}
#found-tabs li {
  margin: 0; 
  padding-left: 4px;
  padding-right: 4px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  line-height: 2;
}
#found-tabs li.active{
  background: var(--sec-hl-color);
  /* color:white; */
}
#found-tabs li:hover {
  background: var(--main-hl-color);
  color: white;
}
/* list counters */
#found-tabs li span:nth-child(1){
  display: inline-block;
  width: 1.65em;
  text-align: right;
}
#found-tabs.one-digit li span:nth-child(1){
  width: 0.85em;
}
#found-tabs.two-digits li span:nth-child(1){
  width: 1.65em;
}
#found-tabs.three-digits li span:nth-child(1){
  width: 2.45em;
}
/*favIcons*/
#found-tabs li span:nth-child(2){
  display: inline-block;
  vertical-align: bottom;
  height: 2em;
  width: 2em;
  background-image:url("assets/tab-dark-24px.svg");
  background-size: 16px 16px;
  background-position: center;
  background-repeat: no-repeat;
}


/* 
ending settings popup style 
*/

#settings-popup.visible{
  display:flex;
}
#settings-popup {
  position: absolute;
  top:0;
  left: 0;
  z-index: 1000;
  width: 100%;
  height: 100%;
  display: none;
  background-color: rgba(80, 80, 80, 0.8);
  justify-content: center;
  align-items: center;

}
#settings-form{
  z-index: 1500;
  width: 80%; 
  background-color: var(--main-bg-color);
  padding: 8px;
}

#settings-form{
  font-size: 1.3rem;
}
#settings-form > *{
  margin-bottom: 4px;
  line-height: 1.5;
}
div.separators{
  display: flex;
  justify-content: left;
  align-items: left

}
div.separators span:nth-child(1){
  width: 100px;
  text-align: right;
  margin-right: 10px;
}
div.separators label{
  margin-right: 10px;
}
div.separators label input {
  margin: 0;
  vertical-align:text-bottom
}
div.separators label span {
  font-size: 1.4rem;
}


div.keyword span:nth-child(1){
  display: inline-block;
  width: 100px;
  text-align: right;
  margin-right: 10px;
}

div.keyword label{
  margin-right: 10px;
}
div.keyword label input {
  margin: 0;
  vertical-align:text-bottom
}

div.keyword #keyword-text{
  width: 120px;
  background:white;
  border: thin solid #0c0c0d;
  border-radius: 5%;
  color: var(--main-text-color);
}

div.buttons {
  display: flex;
  justify-content: center;
  margin-top: 8px;
}
div.buttons button{
  background: var(--main-hl-color);
  cursor: pointer;
  color: #ffffff;
  line-height: 2.5rem;
  border: none;
  border-radius: 10%;
  padding: 0 10px;
  margin: 0 20px;
}

